--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -17,6 +17,25 @@
     "# load data and cleanup\n",
     "print(\"Hello, World!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load data from database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load data from CSVs\n",
+    "import load\n",
+    "\n",
+    "rsl = load.loadData()"
+   ]
   }
  ],
  "metadata": {
