--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -10,18 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import networkx as nx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,20 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_9256\\1346193589.py:11: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_26036\\1346193589.py:11: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  singleFileData = pd.read_csv(folderPath + fileName)\n",
-      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_9256\\1346193589.py:11: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_26036\\1346193589.py:11: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  singleFileData = pd.read_csv(folderPath + fileName)\n",
-      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_9256\\1346193589.py:11: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_26036\\1346193589.py:11: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  singleFileData = pd.read_csv(folderPath + fileName)\n",
-      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_9256\\1346193589.py:11: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Bogdan\\AppData\\Local\\Temp\\ipykernel_26036\\1346193589.py:11: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  singleFileData = pd.read_csv(folderPath + fileName)\n"
      ]
     }
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,16 +102,16 @@
       "     subreddit_id  counts\n",
       "4354         t5_6  163779\n",
       "AVG number users per subreddit:\n",
-      "128.78199523052464\n",
+      "128.78398251192368\n",
       "Max submissions per author:\n",
       "      author  counts\n",
       "84823    gst   18870\n",
       "Max comments per author:\n",
       "                author  counts\n",
-      "12598  NoMoreNicksLeft   13480\n",
+      "12603  NoMoreNicksLeft   13480\n",
       "Subreddits per author:\n",
       "         author  counts\n",
-      "26168  MrKlaatu     181\n"
+      "26173  MrKlaatu     181\n"
      ]
     }
    ],
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +204,53 @@
    "metadata": {},
    "source": [
     "Network Development"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snet = nx.Graph()\n",
+    "snet.add_nodes_from(allSubredditIds)\n",
+    "\n",
+    "authorSubredditIdGroups = allData.groupby([\"author\", \"subreddit_id\"]).groups\n",
+    "groups = dict()\n",
+    "for author, subredditId in authorSubredditIdGroups:\n",
+    "    if author not in groups:\n",
+    "        groups[author] = [subredditId]\n",
+    "    else:\n",
+    "        groups[author].append(subredditId)\n",
+    "\n",
+    "for key in groups:\n",
+    "    subreddit_ids = groups[key]\n",
+    "    for i in range(0, len(subreddit_ids)):\n",
+    "        for j in range(i + 1, len(subreddit_ids)):\n",
+    "            if snet.has_edge(subreddit_ids[i], subreddit_ids[j]):\n",
+    "                snet.edges[subreddit_ids[i], subreddit_ids[j]]['weight'] += 1\n",
+    "            else:\n",
+    "                snet.add_edge(subreddit_ids[i], subreddit_ids[j], weight=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# persist to file\n",
+    "nx.write_gml(snet, \"snet.gml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read from file to avoid long edge addition\n",
+    "snetFromFile = nx.read_gml(\"snet.gml\")"
    ]
   }
  ],
