Add snetf and snett

--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -252,6 +252,31 @@
     "# read from file to avoid long edge addition\n",
     "snetFromFile = nx.read_gml(\"snet.gml\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_threshold = 5\n",
+    "# print(len([(u, v, tags) for u, v, tags in snetFromFile.edges(data=True) if tags[\"weight\"] > w_threshold]))\n",
+    "snetf = nx.Graph()\n",
+    "snetf.add_nodes_from(allSubredditIds)\n",
+    "snetf.add_edges_from([(u, v, tags) for u, v, tags in snetFromFile.edges(data=True) if tags[\"weight\"] > w_threshold])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targetSubreddits = set()\n",
+    "targetSubredditFilter = allData[\"subreddit\"] in targetSubreddits\n",
+    "targetSubredditIds = allData[targetSubredditFilter][\"subreddit_id\"]\n",
+    "snett = snet.subgraph(targetSubredditIds)"
+   ]
   }
  ],
  "metadata": {
