--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "w_threshold = 5\n",
-    "# print(len([(u, v, tags) for u, v, tags in snetFromFile.edges(data=True) if tags[\"weight\"] > w_threshold]))\n",
     "snetf = nx.Graph()\n",
     "snetf.add_nodes_from(allSubredditIds)\n",
     "snetf.add_edges_from([(u, v, tags) for u, v, tags in snetFromFile.edges(data=True) if tags[\"weight\"] > w_threshold])"
@@ -268,14 +267,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['t5_2qh0u', 't5_2qhc8', 't5_2cneq', 't5_2qh0k', 't5_2qh13', 't5_1a8ah', 't5_2qh17', 't5_2qh3v', 't5_2qh5b', 't5_3b8o', 't5_6', 't5_2qh1a', 't5_mouw', 't5_2qh19', 't5_2qh1s', 't5_2qh9z', 't5_2qh11', 't5_2qh33', 't5_2qh2p', 't5_2qh1n', 't5_2qh0n', 't5_2qh2a', 't5_2qh16', 't5_2fwo', 't5_vf2', 't5_2qh1e', 't5_2qh53', 't5_2qh68', 't5_1rqwi', 't5_2qh61', 't5_2qh2z', 't5_2qh3l', 't5_2qh0s', 't5_2qgzt', 't5_2qh1i', 't5_2qh03', 't5_2qh0f', 't5_2qh8x', 't5_2qgzg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "targetSubreddits = {\n",
+    "    \"reddit.com\",\n",
+    "    \"pics\",\n",
+    "    \"worldnews\",\n",
+    "    \"programming\",\n",
+    "    \"business\",\n",
+    "    \"politics\",\n",
+    "    \"obama\",\n",
+    "    \"science\",\n",
+    "    \"technology\",\n",
+    "    \"WTF\",\n",
+    "    \"AskReddit\",\n",
+    "    \"netsec\",\n",
+    "    \"philosophy\",\n",
+    "    \"videos\",\n",
+    "    \"offbeat\",\n",
+    "    \"funny\",\n",
+    "    \"entertainment\",\n",
+    "    \"linux\",\n",
+    "    \"geek\",\n",
+    "    \"gaming\",\n",
+    "    \"comics\",\n",
+    "    \"gadgets\",\n",
+    "    \"nsfw\",\n",
+    "    \"news\",\n",
+    "    \"environment\",\n",
+    "    \"atheism\",\n",
+    "    \"canada\",\n",
+    "    \"math\",\n",
+    "    \"Economics\",\n",
+    "    \"scifi\",\n",
+    "    \"bestof\",\n",
+    "    \"cogsci\",\n",
+    "    \"joel\",\n",
+    "    \"Health\",\n",
+    "    \"guns\",\n",
+    "    \"photography\",\n",
+    "    \"software\",\n",
+    "    \"history\",\n",
+    "    \"ideas\",\n",
+    "}\n",
+    "\n",
+    "targetSubredditIds = [allData[allData[\"subreddit\"] == targetSubreddit][\"subreddit_id\"].unique()[0] for targetSubreddit in targetSubreddits]\n",
+    "snett = snet.subgraph(targetSubredditIds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "targetSubreddits = set()\n",
-    "targetSubredditFilter = allData[\"subreddit\"] in targetSubreddits\n",
-    "targetSubredditIds = allData[targetSubredditFilter][\"subreddit_id\"]\n",
-    "snett = snet.subgraph(targetSubredditIds)"
+    "# persist to file\n",
+    "nx.write_gml(snetf, \"snetf.gml\")\n",
+    "nx.write_gml(snett, \"snett.gml\")"
    ]
   }
  ],
