--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,49 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# persist to file\n",
-    "nx.write_gml(snet, \"snet.gml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read from file to avoid long edge addition\n",
-    "snetFromFile = nx.read_gml(\"snet.gml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "w_threshold = 5\n",
     "snetf = nx.Graph()\n",
     "snetf.add_nodes_from(allSubredditIds)\n",
-    "snetf.add_edges_from([(u, v, tags) for u, v, tags in snetFromFile.edges(data=True) if tags[\"weight\"] > w_threshold])"
+    "snetf.add_edges_from([(u, v, tags) for u, v, tags in snet.edges(data=True) if tags[\"weight\"] > w_threshold])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['t5_2qh0u', 't5_2qhc8', 't5_2cneq', 't5_2qh0k', 't5_2qh13', 't5_1a8ah', 't5_2qh17', 't5_2qh3v', 't5_2qh5b', 't5_3b8o', 't5_6', 't5_2qh1a', 't5_mouw', 't5_2qh19', 't5_2qh1s', 't5_2qh9z', 't5_2qh11', 't5_2qh33', 't5_2qh2p', 't5_2qh1n', 't5_2qh0n', 't5_2qh2a', 't5_2qh16', 't5_2fwo', 't5_vf2', 't5_2qh1e', 't5_2qh53', 't5_2qh68', 't5_1rqwi', 't5_2qh61', 't5_2qh2z', 't5_2qh3l', 't5_2qh0s', 't5_2qgzt', 't5_2qh1i', 't5_2qh03', 't5_2qh0f', 't5_2qh8x', 't5_2qgzg']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "targetSubreddits = {\n",
     "    \"reddit.com\",\n",
@@ -327,13 +299,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "# persist to file\n",
+    "nx.write_gml(snet, \"snet.gml\")\n",
     "nx.write_gml(snetf, \"snetf.gml\")\n",
     "nx.write_gml(snett, \"snett.gml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove not connected nodes\n",
+    "snet.remove_nodes_from(list(nx.isolates(snet)))\n",
+    "snetf.remove_nodes_from(list(nx.isolates(snetf)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is snet connected: False\n",
+      "Number of connected components (Snet): 20\n",
+      "Number of connected components (SnetF): 1\n",
+      "Number of connected components (SnetT): 1\n",
+      "Sizes of connected components (Snet): [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3525]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Is Snet connected: {nx.algorithms.components.is_connected(snet)}\")\n",
+    "print(f\"Number of connected components (Snet): {len(list(nx.connected_components(snet)))}\")\n",
+    "print(f\"Number of connected components (SnetF): {len(list(nx.connected_components(snetf)))}\")\n",
+    "print(f\"Number of connected components (SnetT): {len(list(nx.connected_components(snett)))}\")\n",
+    "\n",
+    "print(f\"Sizes of connected components (Snet): {[len(_) for _ in sorted(list(nx.connected_components(snet)), key=len)]}\")\n",
+    "print(f\"Sizes of connected components (SnetF): {[len(_) for _ in sorted(list(nx.connected_components(snetf)), key=len)]}\")\n",
+    "print(f\"Sizes of connected components (SnetT): {[len(_) for _ in sorted(list(nx.connected_components(snett)), key=len)]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Snet density: 0.02469418593400819\n",
+      "SnetF density: 0.1112984752196984\n",
+      "SnetT density: 1.0\n",
+      "Snet does not have an average_shortest_path_length as it is not connected.\n",
+      "SnetF average_shortest_path_length: 1.9577801547851255\n",
+      "SnetT average_shortest_path_length: 1.0\n",
+      "Snet does not have a diameter as it is not connected.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\asm-reddit-analysis\\reddit-analysis.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X21sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSnetT average_shortest_path_length: \u001b[39m\u001b[39m{\u001b[39;00mnx\u001b[39m.\u001b[39maverage_shortest_path_length(snett)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X21sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSnet does not have a diameter as it is not connected.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X21sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSnet largest component diameter: \u001b[39m\u001b[39m{\u001b[39;00mnx\u001b[39m.\u001b[39mdiameter(snetLargestComponent)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X21sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSnetF diameter: \u001b[39m\u001b[39m{\u001b[39;00mnx\u001b[39m.\u001b[39mdiameter(snetf)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X21sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSnetT diameter: \u001b[39m\u001b[39m{\u001b[39;00mnx\u001b[39m.\u001b[39mdiameter(snett)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\algorithms\\distance_measures.py:388\u001b[0m, in \u001b[0;36mdiameter\u001b[1;34m(G, e, usebounds)\u001b[0m\n\u001b[0;32m    386\u001b[0m     \u001b[39mreturn\u001b[39;00m _extrema_bounding(G, compute\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mdiameter\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    387\u001b[0m \u001b[39mif\u001b[39;00m e \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 388\u001b[0m     e \u001b[39m=\u001b[39m eccentricity(G)\n\u001b[0;32m    389\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mmax\u001b[39m(e\u001b[39m.\u001b[39mvalues())\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\algorithms\\distance_measures.py:331\u001b[0m, in \u001b[0;36meccentricity\u001b[1;34m(G, v, sp)\u001b[0m\n\u001b[0;32m    329\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m G\u001b[39m.\u001b[39mnbunch_iter(v):\n\u001b[0;32m    330\u001b[0m     \u001b[39mif\u001b[39;00m sp \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 331\u001b[0m         length \u001b[39m=\u001b[39m nx\u001b[39m.\u001b[39;49msingle_source_shortest_path_length(G, n)\n\u001b[0;32m    332\u001b[0m         L \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(length)\n\u001b[0;32m    333\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\algorithms\\shortest_paths\\unweighted.py:59\u001b[0m, in \u001b[0;36msingle_source_shortest_path_length\u001b[1;34m(G, source, cutoff)\u001b[0m\n\u001b[0;32m     57\u001b[0m     cutoff \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minf\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     58\u001b[0m nextlevel \u001b[39m=\u001b[39m {source: \u001b[39m1\u001b[39m}\n\u001b[1;32m---> 59\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mdict\u001b[39;49m(_single_shortest_path_length(G\u001b[39m.\u001b[39;49madj, nextlevel, cutoff))\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\algorithms\\shortest_paths\\unweighted.py:91\u001b[0m, in \u001b[0;36m_single_shortest_path_length\u001b[1;34m(adj, firstlevel, cutoff)\u001b[0m\n\u001b[0;32m     89\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m     90\u001b[0m     \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m found:\n\u001b[1;32m---> 91\u001b[0m         nextlevel\u001b[39m.\u001b[39;49mupdate(adj[v])\n\u001b[0;32m     92\u001b[0m     level \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     93\u001b[0m \u001b[39mdel\u001b[39;00m seen\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\classes\\coreviews.py:282\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    280\u001b[0m \u001b[39mif\u001b[39;00m node_ok_shorter:\n\u001b[0;32m    281\u001b[0m     \u001b[39mreturn\u001b[39;00m (n \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mNODE_OK\u001b[39m.\u001b[39mnodes \u001b[39mif\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_atlas)\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m (n \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_atlas \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mNODE_OK(n))\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\classes\\coreviews.py:337\u001b[0m, in \u001b[0;36mFilterAdjacency.__getitem__.<locals>.new_node_ok\u001b[1;34m(nbr)\u001b[0m\n\u001b[0;32m    336\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mnew_node_ok\u001b[39m(nbr):\n\u001b[1;32m--> 337\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39mNODE_OK(nbr) \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mEDGE_OK(node, nbr)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# net characteristics\n",
+    "print(f\"Snet density: {nx.density(snet)}\")\n",
+    "print(f\"SnetF density: {nx.density(snetf)}\")\n",
+    "print(f\"SnetT density: {nx.density(snett)}\")\n",
+    "\n",
+    "snetLargestComponent = snet.subgraph(sorted(list(nx.connected_components(snet)), key=len)[-1])\n",
+    "\n",
+    "print(\"Snet does not have an average_shortest_path_length as it is not connected.\")\n",
+    "# print(f\"Snet largest component average_shortest_path_length: {nx.average_shortest_path_length(snetLargestComponent)}\")\n",
+    "print(f\"SnetF average_shortest_path_length: {nx.average_shortest_path_length(snetf)}\")\n",
+    "print(f\"SnetT average_shortest_path_length: {nx.average_shortest_path_length(snett)}\")\n",
+    "\n",
+    "print(\"Snet does not have a diameter as it is not connected.\")\n",
+    "# print(f\"Snet largest component diameter: {nx.diameter(snetLargestComponent)}\")\n",
+    "print(f\"SnetF diameter: {nx.diameter(snetf)}\")\n",
+    "print(f\"SnetT diameter: {nx.diameter(snett)}\")"
    ]
   }
  ],
