--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -260,22 +260,25 @@
    "metadata": {},
    "source": [
     "### Odabir praga za filtriranje grana po težini\n",
-    "TODO: opis kako se bira *w_threshold*"
+    "Prag za filtriranje je uzet kao prosečna vrednost svih težina grana u grafu SNet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: smarter w_threshold choosing logic\n",
-    "w_threshold = 5\n",
+    "average_weight = sum([tags[\"weight\"] for u, v, tags in snet.edges(data=True)]) / len(snet.edges)\n",
+    "w_threshold = average_weight\n",
+    "\n",
     "# TODO: check if commented out works\n",
     "# snetf = snet.edge_subgraph([(u, v) for u, v, tags in snet.edges(data=True) if tags[\"weight\"] > w_threshold])\n",
+    "\n",
     "snetf = nx.Graph()\n",
     "snetf.add_nodes_from(allSubredditIds)\n",
     "snetf.add_edges_from([(u, v, tags) for u, v, tags in snet.edges(data=True) if tags[\"weight\"] > w_threshold])\n",
+    "\n",
     "snetf.remove_nodes_from(list(nx.isolates(snetf)))"
    ]
   },
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +384,7 @@
       "Number of connected components (SNetF): 1\n",
       "Number of connected components (SNetT): 1\n",
       "Sizes of connected components (SNet): [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3525]\n",
-      "Sizes of connected components (SNetF): [691]\n",
+      "Sizes of connected components (SNetF): [335]\n",
       "Sizes of connected components (SNetT): [39]\n"
      ]
     }
@@ -407,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -417,8 +420,8 @@
       "SNet density: 0.02469418593400819\n",
       "SNet does not have an average_shortest_path_length as it is not connected.\n",
       "SNet does not have a diameter as it is not connected.\n",
-      "SNetF density: 0.1112984752196984\n",
-      "SNetF average_shortest_path_length: 1.9577801547851255\n",
+      "SNetF density: 0.18634373044954866\n",
+      "SNetF average_shortest_path_length: 1.8409866833497184\n",
       "SNetF diameter: 4\n",
       "SNetT density: 1.0\n",
       "SNetT average_shortest_path_length: 1.0\n",
@@ -454,9 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average clustering (SNetF): 0.8219431962786927\n",
+      "Average clustering (SNetT): 1.0\n",
+      "Global clustering (SNetF): 0.5302053063542893\n",
+      "Global clustering (SNetT): 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# print(f\"Average clustering (SNet): {nx.average_clustering(snet)}\")\n",
     "print(f\"Average clustering (SNetF): {nx.average_clustering(snetf)}\")\n",
