--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -191,16 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [Unnamed: 0, id, url, permalink, author, created_utc, subreddit, subreddit_id, num_comments, score, over_18, distinguished, domain, stickied, locked, hide_score, counts]\n",
-      "Index: []\n"
+     "ename": "ValueError",
+     "evalue": "Item wrong length 2 instead of 997317.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\asm-reddit-analysis\\reddit-analysis.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m filteredSubmissionsNonOver18 \u001b[39m=\u001b[39m submissionData[filterNonOver18]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m commentsDataSubmissionId \u001b[39m=\u001b[39m groupby_count_sorted(commentsData, [\u001b[39m\"\u001b[39m\u001b[39mlink_id\u001b[39m\u001b[39m\"\u001b[39m])\u001b[39m.\u001b[39mrename(columns\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mlink_id\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m})\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m commentsDataSubmissionId \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([commentsDataSubmissionId[commentsDataSubmissionId\u001b[39m.\u001b[39;49mcolumns \u001b[39m!=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m\"\u001b[39;49m], commentsDataSubmissionId[\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mmap(\u001b[39mlambda\u001b[39;00m element: element\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m1\u001b[39m])], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m filteredSubmissionsNonOver18JoinedComments \u001b[39m=\u001b[39m filteredSubmissionsNonOver18\u001b[39m.\u001b[39mmerge(commentsDataSubmissionId, how\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39minner\u001b[39m\u001b[39m\"\u001b[39m, on\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(filteredSubmissionsNonOver18JoinedComments[:\u001b[39m10\u001b[39m])\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\pandas\\core\\frame.py:3496\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3494\u001b[0m \u001b[39m# Do we have a (boolean) 1d indexer?\u001b[39;00m\n\u001b[0;32m   3495\u001b[0m \u001b[39mif\u001b[39;00m com\u001b[39m.\u001b[39mis_bool_indexer(key):\n\u001b[1;32m-> 3496\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_bool_array(key)\n\u001b[0;32m   3498\u001b[0m \u001b[39m# We are left with two options: a single key, and a collection of keys,\u001b[39;00m\n\u001b[0;32m   3499\u001b[0m \u001b[39m# We interpret tuples as collections only for non-MultiIndex\u001b[39;00m\n\u001b[0;32m   3500\u001b[0m is_single_key \u001b[39m=\u001b[39m \u001b[39misinstance\u001b[39m(key, \u001b[39mtuple\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m is_list_like(key)\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\pandas\\core\\frame.py:3543\u001b[0m, in \u001b[0;36mDataFrame._getitem_bool_array\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3537\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   3538\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mBoolean Series key will be reindexed to match DataFrame index.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   3539\u001b[0m         \u001b[39mUserWarning\u001b[39;00m,\n\u001b[0;32m   3540\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m   3541\u001b[0m     )\n\u001b[0;32m   3542\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mlen\u001b[39m(key) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex):\n\u001b[1;32m-> 3543\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   3544\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mItem wrong length \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(key)\u001b[39m}\u001b[39;00m\u001b[39m instead of \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex)\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   3545\u001b[0m     )\n\u001b[0;32m   3547\u001b[0m \u001b[39m# check_bool_indexer will throw exception if Series key cannot\u001b[39;00m\n\u001b[0;32m   3548\u001b[0m \u001b[39m# be reindexed to match DataFrame rows\u001b[39;00m\n\u001b[0;32m   3549\u001b[0m key \u001b[39m=\u001b[39m check_bool_indexer(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex, key)\n",
+      "\u001b[1;31mValueError\u001b[0m: Item wrong length 2 instead of 997317."
      ]
     }
    ],
@@ -346,18 +350,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### UserNet\n",
+    "Modelujemo interakcije korisnika društvene mreže usmerenim grafom."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           source         target  weight\n",
+      "0          #NAME?      DRMacIver       1\n",
+      "1          #NAME?     cronin1024       1\n",
+      "2          #NAME?    miyakohouou       1\n",
+      "3          #NAME?       sea_wall       1\n",
+      "4          #NAME?        uggedal       1\n",
+      "...           ...            ...     ...\n",
+      "2035849  zzzz2008       option08       1\n",
+      "2035850  zzzz2008     reddit-man      23\n",
+      "2035851  zzzz2008        ryanh29       1\n",
+      "2035852  zzzz2008  youngturksfan       1\n",
+      "2035853  zzzz2008       zzzz2008       1\n",
+      "\n",
+      "[2035854 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "authorComments = pd.concat([filteredComments[\"author\"], filteredComments[\"link_id\"].map(lambda element: element.split(\"_\")[1])], axis=1).rename(columns={\"link_id\": \"id\"})\n",
+    "authorToAuthorInteractions = groupby_count(authorComments.merge(allData[[\"author\", \"id\"]], on=\"id\", how=\"inner\", suffixes=[\"_from\", \"_to\"]), [\"author_from\", \"author_to\"])\n",
+    "edge_list = authorToAuthorInteractions.rename(columns={\"author_from\": \"source\", \"author_to\": \"target\", \"counts\": \"weight\"})\n",
+    "usernet = nx.from_pandas_edgelist(edge_list, edge_attr=True, create_using=nx.DiGraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dobijene grafove čuvamo u standardnom `gml` formatu na disku kako bismo im mogli pristupati i iz eksternih alata."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "nx.write_gml(snet, \"snet.gml\")\n",
     "nx.write_gml(snetf, \"snetf.gml\")\n",
-    "nx.write_gml(snett, \"snett.gml\")"
+    "nx.write_gml(snett, \"snett.gml\")\n",
+    "nx.write_gml(usernet, \"usernet.gml\")"
    ]
   },
   {
@@ -483,9 +529,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NetworkXAlgorithmError",
+     "evalue": "Maximum number of swap attempts (741000) exceeded before desired swaps achieved (74100).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNetworkXAlgorithmError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\asm-reddit-analysis\\reddit-analysis.ipynb Cell 25\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# print(f\"Rich club phenomenon coefficent (SNet): {nx.rich_club_coefficient(snet)}\")\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# print(f\"Rich club phenomenon coefficent (SNetF): {nx.rich_club_coefficient(snetf)}\")\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Bogdan/Desktop/asm/asm-reddit-analysis/reddit-analysis.ipynb#X33sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRich club phenomenon coefficent (SNetT): \u001b[39m\u001b[39m{\u001b[39;00mnx\u001b[39m.\u001b[39mrich_club_coefficient(snett)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32m<class 'networkx.utils.decorators.argmap'> compilation 22:5\u001b[0m, in \u001b[0;36margmap_rich_club_coefficient_18\u001b[1;34m(G, normalized, Q, seed)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m defaultdict\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\algorithms\\richclub.py:82\u001b[0m, in \u001b[0;36mrich_club_coefficient\u001b[1;34m(G, normalized, Q, seed)\u001b[0m\n\u001b[0;32m     80\u001b[0m R \u001b[39m=\u001b[39m G\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m     81\u001b[0m E \u001b[39m=\u001b[39m R\u001b[39m.\u001b[39mnumber_of_edges()\n\u001b[1;32m---> 82\u001b[0m nx\u001b[39m.\u001b[39;49mdouble_edge_swap(R, Q \u001b[39m*\u001b[39;49m E, max_tries\u001b[39m=\u001b[39;49mQ \u001b[39m*\u001b[39;49m E \u001b[39m*\u001b[39;49m \u001b[39m10\u001b[39;49m, seed\u001b[39m=\u001b[39;49mseed)\n\u001b[0;32m     83\u001b[0m rcran \u001b[39m=\u001b[39m _compute_rc(R)\n\u001b[0;32m     84\u001b[0m rc \u001b[39m=\u001b[39m {k: v \u001b[39m/\u001b[39m rcran[k] \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m rc\u001b[39m.\u001b[39mitems()}\n",
+      "File \u001b[1;32m<class 'networkx.utils.decorators.argmap'> compilation 26:4\u001b[0m, in \u001b[0;36margmap_double_edge_swap_23\u001b[1;34m(G, nswap, max_tries, seed)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcollections\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Bogdan\\Desktop\\asm\\venv\\lib\\site-packages\\networkx\\algorithms\\swap.py:91\u001b[0m, in \u001b[0;36mdouble_edge_swap\u001b[1;34m(G, nswap, max_tries, seed)\u001b[0m\n\u001b[0;32m     86\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m max_tries:\n\u001b[0;32m     87\u001b[0m         e \u001b[39m=\u001b[39m (\n\u001b[0;32m     88\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMaximum number of swap attempts (\u001b[39m\u001b[39m{\u001b[39;00mn\u001b[39m}\u001b[39;00m\u001b[39m) exceeded \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     89\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbefore desired swaps achieved (\u001b[39m\u001b[39m{\u001b[39;00mnswap\u001b[39m}\u001b[39;00m\u001b[39m).\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     90\u001b[0m         )\n\u001b[1;32m---> 91\u001b[0m         \u001b[39mraise\u001b[39;00m nx\u001b[39m.\u001b[39mNetworkXAlgorithmError(e)\n\u001b[0;32m     92\u001b[0m     n \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     93\u001b[0m \u001b[39mreturn\u001b[39;00m G\n",
+      "\u001b[1;31mNetworkXAlgorithmError\u001b[0m: Maximum number of swap attempts (741000) exceeded before desired swaps achieved (74100)."
+     ]
+    }
+   ],
    "source": [
     "# print(f\"Rich club phenomenon coefficent (SNet): {nx.rich_club_coefficient(snet)}\")\n",
     "print(f\"Rich club phenomenon coefficent (SNetF): {nx.rich_club_coefficient(snetf)}\")\n",
