Add csv for top submissions

--- a/reddit-analysis.ipynb
+++ b/reddit-analysis.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,9 @@
     "extractedCommentsData = pd.DataFrame(commentsData[\"link_id\"].map(lambda element: element.split(\"_\")[1]))\n",
     "commentsDataSubmissionId = groupby_count_sorted(extractedCommentsData, [\"link_id\"]).rename(columns={\"link_id\": \"id\"})\n",
     "filteredSubmissionsNonOver18JoinedComments = filteredSubmissionsNonOver18.merge(commentsDataSubmissionId, how=\"inner\", on=\"id\")\n",
-    "print(filteredSubmissionsNonOver18JoinedComments.sort_values(by=\"counts\", ascending=False)[:10])"
+    "topSubmissionsNonOver18JoinedComments = filteredSubmissionsNonOver18JoinedComments.sort_values(by=\"counts\", ascending=False)[:10]\n",
+    "print(topSubmissionsNonOver18JoinedComments)\n",
+    "topSubmissionsNonOver18JoinedComments.to_csv(\"top_submission_non_over_18.csv\")"
    ]
   },
   {
